src/hoppet_cxx_oo.F90


  !! return a pointer to the convolution object inside the grid_conv
  !! or a null pointer if it not allocated
  function hoppet_cxx__grid_conv__conv_ptr(gc, sz_y, sz_order) bind(C) result(res)
    implicit none
    type(c_ptr),    intent(in), value :: gc
    integer(c_int), intent(out)       :: sz_y
    integer(c_int), intent(out)       :: sz_order
    type(c_ptr)                       :: res
    type(grid_conv), pointer :: gc_f

    call c_f_pointer(gc, gc_f)
    if (associated(gc_f%conv)) then
      res = c_loc(gc_f%conv(lbound(gc_f%conv,1), lbound(gc_f%conv,2)))
      sz_y = size(gc_f%conv,1)
      sz_order = size(gc_f%conv,2)
    else
      res = c_null_ptr
    end if
  end function hoppet_cxx__grid_conv__conv_ptr

  !! finally the member accessors
  DEFINE_RETURN_OBJ_MEMBER(grid_conv,grid,grid_def)
  DEFINE_RETURN_OBJ_MEMBER_I(grid_conv,subgc,grid_conv)

end module hoppet_cxx_oo_grid_conv


!=====================================================================
!! wrappers for C++ OO interface to split_mat objects
module hoppet_cxx_oo_split_mat
  use types, only: dp
  use, intrinsic :: iso_c_binding
  use hoppet_cxx_oo_grid_def
  use hoppet_cxx_oo_grid_quant
  use dglap_objects
  implicit none

contains
  !! return a c pointer to a new split_mat with the given lcl_nf
  function hoppet_cxx__split_mat__new(lcl_nf) bind(C) result(split_mat_ptr)
    implicit none
    integer(c_int), intent(in), value :: lcl_nf
    type(c_ptr) :: split_mat_ptr
    !--
    type(split_mat), pointer :: f_ptr

    allocate(f_ptr)
    call cobj_InitSplitLinks(f_ptr)
    f_ptr%nf_int = lcl_nf
    split_mat_ptr = c_loc(f_ptr)
  end function hoppet_cxx__split_mat__new

  !! return a c pointer to a copy of the (split_mat_c_ptr) split_mat
  function hoppet_cxx__split_mat__copy(other) bind(C) result(split_mat_ptr)
    implicit none
    type(c_ptr), intent(in), value :: other
    type(c_ptr) :: split_mat_ptr
    !--
    type(split_mat), pointer :: f_ptr, other_f_ptr

    call c_f_pointer(other, other_f_ptr)
    allocate(f_ptr)
    call InitSplitMat(f_ptr, other_f_ptr)
    split_mat_ptr = c_loc(f_ptr)
  end function hoppet_cxx__split_mat__copy

  !! copy the contents of the split mat 'src' into 'dest'
  subroutine hoppet_cxx__split_mat__copy_contents(dest, src) bind(C)
    implicit none
    type(c_ptr), intent(in), value :: dest
    type(c_ptr), intent(in), value :: src
    !--
    type(split_mat), pointer :: dest_f, src_f

    call c_f_pointer(dest, dest_f)
    call c_f_pointer(src, src_f)
    call InitSplitMat(dest_f, src_f)
  end subroutine hoppet_cxx__split_mat__copy_contents

  !! sm1 += sm2
  subroutine hoppet_cxx__split_mat__add(sm1, sm2, factor) bind(C)
    implicit none
    type(c_ptr),    intent(in), value    :: sm1, sm2
    real(c_double), intent(in), optional :: factor
    type(split_mat), pointer :: sm1_f, sm2_f
    call c_f_pointer(sm1, sm1_f)
    call c_f_pointer(sm2, sm2_f)
    call AddWithCoeff(sm1_f,sm2_f,factor)
  end subroutine hoppet_cxx__split_mat__add

  !! sm1 *=factor
  subroutine hoppet_cxx__split_mat__multiply(sm1, factor) bind(C)
    implicit none
    type(c_ptr),    intent(in), value :: sm1
    real(c_double), intent(in), value :: factor
    type(split_mat), pointer :: sm1_f
    call c_f_pointer(sm1, sm1_f)
    call Multiply(sm1_f,factor)
  end subroutine hoppet_cxx__split_mat__multiply

  !! allocate a new split_mat that is the convolution of sm1 and sm2 and return a pointer to it
  function hoppet_cxx__split_mat__alloc_and_conv(sm1, sm2) bind(C) result(res)
    implicit none
    type(c_ptr),    intent(in), value :: sm1, sm2
    type(c_ptr) :: res
    type(split_mat), pointer :: sm1_f, sm2_f, res_f

    call c_f_pointer(sm1, sm1_f)
    call c_f_pointer(sm2, sm2_f)
    allocate(res_f)
    call AllocSplitMat(sm1_f%qq%grid, res_f, sm1_f%nf_int)
    call SetToConvolution(res_f, sm1_f, sm2_f)
    res = c_loc(res_f)
  end function hoppet_cxx__split_mat__alloc_and_conv

  !! allocate a new split_mat that is the convolution of sm1 and sm2 and return a pointer to it
  function hoppet_cxx__split_mat__alloc_and_commutate(sm1, sm2) bind(C) result(res)
    implicit none
    type(c_ptr),    intent(in), value :: sm1, sm2
    type(c_ptr) :: res
    type(split_mat), pointer :: sm1_f, sm2_f, res_f

    call c_f_pointer(sm1, sm1_f)
    call c_f_pointer(sm2, sm2_f)
    allocate(res_f)
    call AllocSplitMat(sm1_f%qq%grid, res_f, sm1_f%nf_int)
    call SetToCommutator(res_f, sm1_f, sm2_f)
    res = c_loc(res_f)
  end function hoppet_cxx__split_mat__alloc_and_commutate


  !! result_data = split_mat_ptr * q_data
  subroutine hoppet_cxx__split_mat__times_grid_quant_2d(split_mat_ptr, q_data, result_data) bind(C)
    use pdf_representation
    implicit none
    type(c_ptr), intent(in), value :: split_mat_ptr
    type(c_ptr), intent(in), value :: q_data
    type(c_ptr), intent(in), value :: result_data
    !--
    type(split_mat), pointer :: split_mat_f
    real(dp), pointer :: q(:,:)
    real(dp), pointer :: result(:,:)

    call c_f_pointer(split_mat_ptr, split_mat_f)
    call c_f_pointer(q_data, q, shape=[split_mat_f%qq%grid%ny+1, ncompmax-ncompmin+1])
    call c_f_pointer(result_data, result, shape=[split_mat_f%qq%grid%ny+1, ncompmax-ncompmin+1])

    result = split_mat_f * q
  end subroutine hoppet_cxx__split_mat__times_grid_quant_2d

  !! return the nf value of the split_mat
  function hoppet_cxx__split_mat__nf(other) bind(C) result(lcl_nf)
    implicit none
    type(c_ptr), intent(in), value :: other
    integer(c_int) :: lcl_nf
    !--
    type(split_mat), pointer :: other_f_ptr

    call c_f_pointer(other, other_f_ptr)
    lcl_nf = other_f_ptr%nf_int
  end function hoppet_cxx__split_mat__nf

  !! delete a split_mat object (and its associated fortran storage)
  subroutine hoppet_cxx__split_mat__delete(split_mat_c_ptr) bind(C)
    implicit none
    type(c_ptr), intent(inout) :: split_mat_c_ptr
    !--
    type(split_mat), pointer :: f_ptr

    call c_f_pointer(split_mat_c_ptr, f_ptr)
    call Delete(f_ptr)
    deallocate(f_ptr)
    split_mat_c_ptr = c_null_ptr
  end subroutine hoppet_cxx__split_mat__delete


  ! define a macro to generate the functions that return references to the grid_conv members
#define SPLIT_MAT__REF(NAME)  DEFINE_RETURN_OBJ_MEMBER(split_mat,NAME,grid_conv)

  SPLIT_MAT__REF(qq      )
  SPLIT_MAT__REF(qg      )
  SPLIT_MAT__REF(gq      )
  SPLIT_MAT__REF(gg      )
  SPLIT_MAT__REF(ns_plus )
  SPLIT_MAT__REF(ns_minus)
  SPLIT_MAT__REF(ns_v    )

#undef SPLIT_MAT__REF

end module hoppet_cxx_oo_split_mat


!=====================================================================
!! wrappers for C++ OO interface to mass_threshold_mat objects
module hoppet_cxx_oo_mass_threshold_mat
  use, intrinsic :: iso_c_binding
  use dglap_objects
  implicit none
contains

  !! return a C pointer to a new mass_threshold_mat with the given lcl_nf
  function hoppet_cxx__mass_threshold_mat__new(lcl_nf) bind(C) result(mass_threshold_mat_ptr)
    implicit none
    integer(c_int), intent(in), value :: lcl_nf
    type(c_ptr) :: mass_threshold_mat_ptr
    !--
    type(mass_threshold_mat), pointer :: f_ptr

    allocate(f_ptr)    
    f_ptr%nf_int = lcl_nf
    f_ptr%loops  = 0
    mass_threshold_mat_ptr = c_loc(f_ptr)
  end function hoppet_cxx__mass_threshold_mat__new

  !! return a C pointer to a copy of the other mass_threshold_mat
  function hoppet_cxx__mass_threshold_mat__copy(other) bind(C) result(mass_threshold_mat_ptr)
    implicit none
    type(c_ptr), intent(in), value :: other
    type(c_ptr) :: mass_threshold_mat_ptr
    !--
    type(mass_threshold_mat), pointer :: f_ptr, other_f_ptr

    call c_f_pointer(other, other_f_ptr)
    allocate(f_ptr)
    call InitMTM(f_ptr, other_f_ptr)
    mass_threshold_mat_ptr = c_loc(f_ptr)
  end function hoppet_cxx__mass_threshold_mat__copy

  !! return a C pointer to a copy of the other mass_threshold_mat
  subroutine hoppet_cxx__mass_threshold_mat__copy_contents(dest,other) bind(C)
    implicit none
    type(c_ptr), intent(in), value :: dest,other
    type(c_ptr) :: mass_threshold_mat_ptr
    !--
    type(mass_threshold_mat), pointer :: f_ptr, other_f_ptr

    call c_f_pointer(other, other_f_ptr)
    call InitMTM(other_f_ptr, f_ptr)
  end subroutine hoppet_cxx__mass_threshold_mat__copy_contents

  DEFINE_DELETE(mass_threshold_mat)

  !! set the nf(heavy) value of the mass_threshold_mat
  subroutine hoppet_cxx__mass_threshold_mat__set_nf(mtm, nf_lcl) bind(C)
    implicit none
    type(c_ptr), intent(in), value :: mtm
    integer(c_int), intent(in), value :: nf_lcl
    !--
    type(mass_threshold_mat), pointer :: mtm_f

    call c_f_pointer(mtm, mtm_f)
    call SetNfMTM(mtm_f, nf_lcl)
  end subroutine hoppet_cxx__mass_threshold_mat__set_nf

  !! result_data = mass_threshold_mat_ptr * q_data
  subroutine hoppet_cxx__mass_threshold_mat__times_grid_quant_2d(mass_threshold_mat_ptr, q_data, result_data) bind(C)
    use pdf_representation
    implicit none
    type(c_ptr), intent(in), value :: mass_threshold_mat_ptr
    type(c_ptr), intent(in), value :: q_data
    type(c_ptr), intent(in), value :: result_data
    !--
    type(mass_threshold_mat), pointer :: mass_threshold_mat_f
    real(dp), pointer :: q(:,:)
    real(dp), pointer :: result(:,:)

    call c_f_pointer(mass_threshold_mat_ptr, mass_threshold_mat_f)
    call c_f_pointer(q_data, q, shape=[mass_threshold_mat_f%PShq%grid%ny+1, ncompmax-ncompmin+1])
    call c_f_pointer(result_data, result, shape=[mass_threshold_mat_f%PShq%grid%ny+1, ncompmax-ncompmin+1])

    result = mass_threshold_mat_f * q
  end subroutine hoppet_cxx__mass_threshold_mat__times_grid_quant_2d

  !! mtm1 += mtm2
  subroutine hoppet_cxx__mass_threshold_mat__add(mtm1, mtm2, factor) bind(C)
    implicit none
    type(c_ptr),    intent(in), value    :: mtm1, mtm2
    real(c_double), intent(in), optional :: factor
    type(mass_threshold_mat), pointer :: mtm1_f, mtm2_f
    call c_f_pointer(mtm1, mtm1_f)
    call c_f_pointer(mtm2, mtm2_f)
    call AddWithCoeff(mtm1_f,mtm2_f,factor)
  end subroutine hoppet_cxx__mass_threshold_mat__add

  !! mtm1 *=factor
  subroutine hoppet_cxx__mass_threshold_mat__multiply(mtm1, factor) bind(C)
    implicit none
    type(c_ptr),    intent(in), value :: mtm1
    real(c_double), intent(in), value :: factor
    type(mass_threshold_mat), pointer :: mtm1_f
    call c_f_pointer(mtm1, mtm1_f)
    call Multiply(mtm1_f,factor)
  end subroutine hoppet_cxx__mass_threshold_mat__multiply


#define MTM_REF(NAME)  DEFINE_RETURN_OBJ_MEMBER(mass_threshold_mat,NAME,grid_conv)
  MTM_REF(pshq      ) !!< A^PS_Qq    Q+Qbar from singlet(nflight)
  MTM_REF(pshg      ) !!< A^PS_Qg    Q+Qbar from gluon  (nflight)
  MTM_REF(nsqq_h    ) !!< A^NS_qq,Q  ΔNS(nfheavy) from NS(nflight)
  MTM_REF(sgg_h     ) !!< A^S_gg,Q   Δg(nfheavy) from g(nflight)
  MTM_REF(sgq_H     ) !!< A^S_gq,Q   Δg(nfheavy) from singlet(nflight)
  MTM_REF(psqq_h    ) !!< A^PS_qq,Q  Δsinglet(nfheavy) from singlet(nflight)
  MTM_REF(sqg_h     ) !!< A^S_qg,Q   Δsinglet(nfheavy) from gluon(nflight)
  MTM_REF(nsmqq_h   ) !!< A^{NSm}_qq,Q ΔNSminus(1:nflight) from NSminus(1:nflight)
  MTM_REF(pshg_msbar) !!< replaces PShg when masses are MSbar

#define MTM_INT(NAME)  DEFINE_RETURN_INT_MEMBER(mass_threshold_mat,NAME)
  MTM_INT(nf_int)
  MTM_INT(loops)

end module hoppet_cxx_oo_mass_threshold_mat

!=====================================================================
!! module for the wrapping a running_coupling object
module hoppet_cxx_oo_running_coupling
  use, intrinsic :: iso_c_binding
  use qcd_coupling
  implicit none
contains
